--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "alertmanager"]
 	path = alertmanager
 	url = https://github.com/prometheus/alertmanager
+[submodule "prometheus"]
+	path = prometheus
+	url = https://github.com/prometheus/prometheus.git
