--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = obo-prometheus-operator
 	url = https://github.com/rhobs/obo-prometheus-operator
 	branch = rhobs-rel-0.77.1-rhobs1
+[submodule "observability-operator"]
+	path = observability-operator
+	url = https://github.com/rhobs/observability-operator
