OU-547: Update uiplugins release branch for COO 1.0.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,19 +14,19 @@
 [submodule "ui-logging"]
 	path = ui-logging
 	url = https://github.com/openshift/logging-view-plugin.git
-	branch = main
+	branch = release-6.0
 [submodule "ui-dashboards"]
 	path = ui-dashboards
 	url = https://github.com/openshift/console-dashboards-plugin.git
-	branch = main
+	branch = release-0.3
 [submodule "ui-troubleshooting-panel"]
 	path = ui-troubleshooting-panel
 	url = https://github.com/openshift/troubleshooting-panel-console-plugin.git
-	branch = main
+	branch = release-0.3
 [submodule "ui-distributed-tracing"]
 	path = ui-distributed-tracing
 	url = https://github.com/openshift/distributed-tracing-console-plugin.git
-	branch = main
+	branch = release-0.3
 [submodule "ui-monitoring"]
 	path = ui-monitoring
 	url = https://github.com/openshift/monitoring-plugin.git
