Add thanos component
This commit adds thanos Dockerfile to the coo konflux repository. As
with prometheus component, this is temporarily relying on promu from
git.

Signed-off-by: Daniel Mellado <dmellado@redhat.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 	path = ui-monitoring
 	url = https://github.com/openshift/monitoring-plugin.git
 	branch = main
+[submodule "thanos"]
+	path = thanos
+	url = https://github.com/thanos-io/thanos.git
