alertmanager: set version to 0.27 and fix preflight checks
Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "alertmanager"]
 	path = alertmanager
 	url = https://github.com/prometheus/alertmanager
+        branch = release-0.27
 [submodule "prometheus"]
 	path = prometheus
 	url = https://github.com/prometheus/prometheus.git
