--- a/Dockerfile.prom-op
+++ b/Dockerfile.prom-op
@@ -10,16 +10,22 @@ COPY obo-prometheus-operator/ .
 # Build
 RUN make operator
 
-FROM quay.io/prometheus/busybox-${OS}-${ARCH}:latest
+FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1086
 
 COPY --from=builder workspace/operator /bin/operator
+COPY --from=builder /workspace/LICENSE      /licenses/.
 
 # On busybox 'nobody' has uid `65534'
 USER 65534
 
-LABEL org.opencontainers.image.source="https://github.com/rhobs/obo-prometheus-operator" \
-    org.opencontainers.image.url="https://prometheus-operator.dev/" \
-    org.opencontainers.image.documentation="https://prometheus-operator.dev/" \
-    org.opencontainers.image.licenses="Apache-2.0"
+LABEL com.redhat.component="coo-prometheus-operator" \
+      name="prometheus-operator" \
+      version="v0.77.1" \
+      summary="Prometheus Operator" \
+      io.openshift.tags="monitoring" \
+      io.k8s.display-name="Prometheus Operator" \
+      maintainer="OpenShift Monitoring team <team-monitoring-incluster@redhat.com>" \
+      maintainer="Prometheus Operator" \
+      description="Prometheus Operator"
 
 ENTRYPOINT ["/bin/operator"]
