--- a/Dockerfile.thanos
+++ b/Dockerfile.thanos
@@ -17,6 +17,7 @@ FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1086
 WORKDIR /
 
 COPY --from=builder /go/bin/thanos /bin/thanos
+COPY --from=builder /workspace/LICENSE      /licenses/.
 
 USER nobody
 ENTRYPOINT [ "/bin/thanos" ]
