--- a/Dockerfile.bundle
+++ b/Dockerfile.bundle
@@ -1,3 +1,15 @@
+FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1052.1724178568 as builder
+
+WORKDIR /workspace
+
+COPY /observability-operator/bundle/ bundle
+COPY /bundle-patches/render_templates .
+
+RUN mv bundle/manifests/observability-operator.clusterserviceversion.yaml bundle/manifests/cluster-observability-operator.clusterserviceversion.yaml
+RUN ./render_tamplates bundle/manifests/cluster-observability-operator.clusterserviceversion.yaml bundle/metadata/annotations.yaml
+
+
+
 FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1052.1724178568
 
 # Core bundle labels.
@@ -28,7 +40,7 @@ LABEL com.redhat.component="coo-bundle" \
       vendor="Red Hat, Inc."
 
 # Copy files to locations specified by labels.
-COPY observability-operator/bundle/manifests /manifests/
-COPY observability-operator/bundle/metadata /metadata/
-COPY observability-operator/bundle/tests/scorecard /tests/scorecard/
-COPY observability-operator/LICENSE /licenses/.
+COPY --from=builder workspace/bundle/manifests /manifests/
+COPY --from=builder workspace/bundle/metadata /metadata/
+COPY --from=builder workspace/bundle/tests/scorecard /tests/scorecard/
+COPY --from=builder workspace/LICENSE /licenses/.
