--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
 [submodule "alertmanager"]
 	path = alertmanager
 	url = https://github.com/prometheus/alertmanager
+        branch = release-0.27
 [submodule "prometheus"]
 	path = prometheus
 	url = https://github.com/prometheus/prometheus.git
+        branch = release-2.55
 [submodule "obo-prometheus-operator"]
 	path = obo-prometheus-operator
 	url = https://github.com/rhobs/obo-prometheus-operator
@@ -14,20 +16,24 @@
 [submodule "ui-logging"]
 	path = ui-logging
 	url = https://github.com/openshift/logging-view-plugin.git
-	branch = main
+	branch = release-6.0
 [submodule "ui-dashboards"]
 	path = ui-dashboards
 	url = https://github.com/openshift/console-dashboards-plugin.git
-	branch = main
+	branch = release-0.3
 [submodule "ui-troubleshooting-panel"]
 	path = ui-troubleshooting-panel
 	url = https://github.com/openshift/troubleshooting-panel-console-plugin.git
-	branch = main
+	branch = release-0.3
 [submodule "ui-distributed-tracing"]
 	path = ui-distributed-tracing
 	url = https://github.com/openshift/distributed-tracing-console-plugin.git
-	branch = main
+	branch = release-0.3
 [submodule "ui-monitoring"]
 	path = ui-monitoring
 	url = https://github.com/openshift/monitoring-plugin.git
 	branch = main
+[submodule "thanos"]
+	path = thanos
+	url = https://github.com/thanos-io/thanos.git
+        branch = release-0.36
