--- a/Dockerfile.bundle
+++ b/Dockerfile.bundle
@@ -1,4 +1,13 @@
-FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1052.1724178568 as builder
+FROM registry.redhat.io/ubi8/go-toolset:1.22.8 as builder
+
+ENV GOBIN=$GOPATH/bin
+
+# renovate: datasource=github-releases depName=mikefarah/yq
+ARG YQ_VERSION=4.43.1
+
+RUN curl -L "https://github.com/mikefarah/yq/releases/download/v${YQ_VERSION}/yq_linux_amd64" -o /usr/local/bin/yq && \
+    chmod +x /usr/local/bin/yq && \
+    yq --version
 
 WORKDIR /workspace
 
