--- a/.tekton/obo-prometheus-operator-admission-webhook-push.yaml
+++ b/.tekton/obo-prometheus-operator-admission-webhook-push.yaml
@@ -6,8 +6,11 @@ metadata:
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "main"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" &&
+      (".tekton/obo-prometheus-operator-admission-webhook-pull-request.yaml".pathChanged() ||
+      ".tekton/obo-prometheus-operator-admission-webhook-push.yaml".pathChanged() ||
+      "Dockerfile.p-o-admission-webhook".pathChanged() ||
+      "obo-prometheus-operator".pathChanged())
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: cluster-observability-operator-1-0
