--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,7 @@
 	path = thanos
 	url = https://github.com/thanos-io/thanos.git
         branch = release-0.36
+[submodule "korrel8r"]
+	path = korrel8r
+	url = https://github.com/korrel8r/korrel8r.git
+	branch = main
