--- a/Dockerfile.bundle
+++ b/Dockerfile.bundle
@@ -2,7 +2,7 @@ FROM registry.redhat.io/ubi8/go-toolset:1.22.7-5 as builder
 
 USER root
 
-RUN dnf install -y python3
+RUN dnf install -y python3 python3-pyyaml
 
 # renovate: datasource=github-releases depName=mikefarah/yq
 ARG YQ_VERSION=4.43.1
@@ -14,6 +14,7 @@ RUN curl -L "https://github.com/mikefarah/yq/releases/download/v${YQ_VERSION}/yq
 WORKDIR /workspace
 
 COPY /observability-operator/bundle/ bundle
+COPY /observability-operator/LICENSE LICENSE
 COPY /bundle-patches/render_templates .
 
 RUN mv bundle/manifests/observability-operator.clusterserviceversion.yaml bundle/manifests/cluster-observability-operator.clusterserviceversion.yaml
