render_templates: add korrel8r image, fix image refs, add relatedImages
Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/.tekton/cluster-observability-operator-bundle-pull-request.yaml
+++ b/.tekton/cluster-observability-operator-bundle-pull-request.yaml
@@ -12,7 +12,7 @@ metadata:
       (".tekton/cluster-observability-operator-bundle-pull-request.yaml".pathChanged() ||
       ".tekton/cluster-observability-operator-bundle-push.yaml".pathChanged() ||
       "Dockerfile.bundle".pathChanged() ||
-      "bundle-patches".pathChanged() ||
+      "bundle-patches/*".pathChanged() ||
       "observability-operator".pathChanged())
   creationTimestamp: null
   labels:
