--- a/Dockerfile.korrel8r
+++ b/Dockerfile.korrel8r
@@ -7,13 +7,13 @@ COPY korrel8r .
 ENV GOFLAGS='-mod=mod'
 ENV CGO_ENABLED=0
 
-RUN go build cmd/korrel8r/
+RUN go build ./cmd/korrel8r/
 
 
 FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1086
 WORKDIR /
 
-COPY --from=builder /go/bin/korrel8r /bin/korrel8r
+COPY --from=builder /workspace/korrel8r /bin/korrel8r
 COPY --from=builder /workspace/etc/korrel8r /etc/korrel8r
 
 USER nobody
