--- a/.tekton/korrel8r-push.yaml
+++ b/.tekton/korrel8r-push.yaml
@@ -10,7 +10,7 @@ metadata:
       (".tekton/korrel8r-pull-request.yaml".pathChanged() ||
       ".tekton/korrel8r-push.yaml".pathChanged() ||
       "Dockerfile.korrel8r".pathChanged() ||
-      "korrel8r".pathChanged()) 
+      "korrel8r".pathChanged())
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: cluster-observability-operator-1-0
@@ -113,7 +113,7 @@ spec:
       description: Image tag expiration time, time values could be something like
         1h, 2d, 3w for hours, days, and weeks, respectively.
       name: image-expires-after
-    - default: "false"
+    - default: "true"
       description: Build a source image.
       name: build-source-image
       type: string
