--- a/Dockerfile.bundle
+++ b/Dockerfile.bundle
@@ -22,7 +22,7 @@ RUN ./render_templates bundle/manifests/cluster-observability-operator.clusterse
 
 
 
-FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1052.1724178568
+FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1130
 
 # Core bundle labels.
 LABEL operators.operatorframework.io.bundle.mediatype.v1=registry+v1
