Fix renovate json file
The renovate.json file had an extra comma on it so it wasn't really
being evaluated as a proper json. It also adds escaping to the regex
file.

Signed-off-by: Daniel Mellado <dmellado@fedoraproject.org>

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,6 @@
         "github>konflux-ci/mintmaker//config/renovate/renovate.json"
     ],
     "dockerfile": {
-        "fileMatch": ["^Dockerfile\.[a-zA-Z0-9\.-]+$"]
-    },
+        "fileMatch": ["^Dockerfile\\.[a-zA-Z0-9\\.-]+$"]
+    }
 }
