--- a/Dockerfile.ui-dashboards
+++ b/Dockerfile.ui-dashboards
@@ -49,5 +49,6 @@ LABEL com.redhat.component="coo-dashboards-console-plugin" \
       summary="OpenShift console plugin to enhance dashboards datasources" \
       io.openshift.tags="openshift,observability-ui" \
       io.k8s.display-name="OpenShift console dashboards plugin" \
+      io.k8s.description="OpenShift console plugin to enhance dashboards datasources" \
       maintainer="Observability UI Team <team-observability-ui@redhat.com>" \
       description="OpenShift console plugin to enhance dashboards datasources"
