multi-arch: remove hardcoded build architecture
Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/Dockerfile.alertmanager
+++ b/Dockerfile.alertmanager
@@ -1,7 +1,9 @@
-ARG ARCH=amd64
-ARG OS=linux
-ARG GOLANG_BUILDER=1.23
-FROM quay.io/prometheus/golang-builder:${GOLANG_BUILDER}-base as builder
+FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_8_golang_1.22 AS builder
+
+RUN dnf module install -y nodejs:16/development
+
+ENV NPM_CONFIG_NODEDIR=/usr
+
 WORKDIR /workspace
 
 # Copy source files
