add required go build env variables
Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/Dockerfile.thanos
+++ b/Dockerfile.thanos
@@ -5,6 +5,7 @@ WORKDIR /workspace
 COPY thanos .
 
 ENV GOFLAGS='-mod=mod'
+ENV CGO_ENABLED=0
 
 # Install promu and build thanos
 ARG TARGETOS TARGETARCH
