--- a/Dockerfile.p-o-admission-webhook
+++ b/Dockerfile.p-o-admission-webhook
@@ -4,6 +4,9 @@ WORKDIR /workspace
 # Copy source files
 COPY obo-prometheus-operator/ .
 
+ENV GOFLAGS='-mod=mod'
+ENV CGO_ENABLED=0
+
 # Build
 RUN make admission-webhook
 
