--- a/Dockerfile.prometheus
+++ b/Dockerfile.prometheus
@@ -11,6 +11,7 @@ RUN yum install -y --setopt=tsflags=nodocs bzip2 jq
 COPY prometheus/ .
 
 ENV GOFLAGS='-mod=mod'
+ENV CGO_ENABLED=0
 
 # Download and install promu for the specified OS and architecture
 ARG TARGETOS TARGETARCH
