Add missing go mod env var in Dockerfiles
Signed-off-by: Mario Fernandez <mariofer@redhat.com>

--- a/Dockerfile.p-o-admission-webhook
+++ b/Dockerfile.p-o-admission-webhook
@@ -4,6 +4,8 @@ WORKDIR /workspace
 # Copy source files
 COPY obo-prometheus-operator/ .
 
+ENV GOFLAGS='-mod=mod'
+
 # Build
 RUN make admission-webhook
 
