korrel8r: fix scan violations and update module
Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/Dockerfile.korrel8r
+++ b/Dockerfile.korrel8r
@@ -16,6 +16,8 @@ WORKDIR /
 
 COPY --from=builder /workspace/korrel8r /bin/korrel8r
 COPY --from=builder /workspace/etc/korrel8r /etc/korrel8r
+COPY --from=builder /workspace/LICENSE      /licenses/.
+USER 1000
 
 ENTRYPOINT [ "/bin/korrel8r", "web" ]
 
