Trigger prometheus build
Signed-off-by: Daniel Mellado <dmellado@fedoraproject.org>

--- a/Dockerfile.prometheus
+++ b/Dockerfile.prometheus
@@ -13,7 +13,7 @@ COPY prometheus/ .
 ENV GOFLAGS='-mod=mod'
 ENV CGO_ENABLED=0
 
-# Download and install promu for the specified OS and architecture
+# Download and install promu for the specified OS and Architecture
 ARG TARGETOS TARGETARCH
 RUN wget https://github.com/prometheus/promu/releases/download/v0.17.0/promu-0.17.0.${TARGETOS}-${TARGETARCH}.tar.gz \
     && tar -xzf promu-0.17.0.${TARGETOS}-${TARGETARCH}.tar.gz -C /usr/local/bin \
