--- a/.tekton/coo-fbc-v4-15-push.yaml
+++ b/.tekton/coo-fbc-v4-15-push.yaml
@@ -172,6 +172,8 @@ spec:
         values:
         - "true"
       workspaces:
+      - name: output
+        workspace: workspace
       - name: basic-auth
         workspace: git-auth
     - name: build-container
@@ -204,6 +206,9 @@ spec:
         operator: in
         values:
         - "true"
+      workspaces:
+      - name: source
+        workspace: workspace
     - name: build-image-index
       params:
       - name: IMAGE
