fix build-images line
Signed-off-by: Mario Fernandez <mariofer@redhat.com>

--- a/.tekton/coo-fbc-v4-14-pull-request.yaml
+++ b/.tekton/coo-fbc-v4-14-pull-request.yaml
@@ -249,7 +249,7 @@ spec:
         value:
         - $(tasks.build-images.results.IMAGE_REF[*])
       runAfter:
-      - build-container
+      - build-images
       taskRef:
         params:
         - name: name
