validate-fbc: need to point to a bundle
even if mogration guide doesn't say so.

Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/.tekton/coo-fbc-v4-12-pull-request.yaml
+++ b/.tekton/coo-fbc-v4-12-pull-request.yaml
@@ -316,6 +316,8 @@ spec:
         params:
         - name: name
           value: validate-fbc
+        - name: bundle
+          value: quay.io/konflux-ci/tekton-catalog/task-validate-fbc:0.1
         - name: kind
           value: task
         resolver: bundles
