catalog: don't convert bundle-objects to csv-metadata <=4.16
Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/Dockerfile-4.14.catalog
+++ b/Dockerfile-4.14.catalog
@@ -4,7 +4,7 @@ FROM registry.redhat.io/openshift4/ose-operator-registry:v4.14
 ENTRYPOINT ["/bin/opm"]
 CMD ["serve", "/configs", "--cache-dir=/tmp/cache"]
 
-COPY catalog/coo-product /configs/cluster-observability-operator
+COPY catalog/coo-product-4.16 /configs/cluster-observability-operator
 
 RUN ["/bin/opm", "serve", "/configs", "--cache-dir=/tmp/cache", "--cache-only"]
 
