--- a/.tekton/cluster-observability-operator-bundle-push.yaml
+++ b/.tekton/cluster-observability-operator-bundle-push.yaml
@@ -31,6 +31,9 @@ spec:
     value: Dockerfile.bundle
   - name: path-context
     value: .
+  - name: build-args
+    value:
+      - REGISTRY=registry.redhat.io
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while reducing network traffic.
