Update .gitmodules to point at release branch `release-v0.1.0` Update Dockerfile.perses-operator with redhat certified images and instructions to build the application (this is based on perses/perses-operator/Dockerfile.dev)

--- a/Dockerfile.perses-operator
+++ b/Dockerfile.perses-operator
@@ -1,14 +1,21 @@
-FROM alpine AS build-env
-RUN apk add --update --no-cache mailcap
+FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_8_golang_1.22 as build-env
 
-FROM gcr.io/distroless/static-debian12
+RUN apk add --update --no-cache make bash mailcap
+
+WORKDIR /app
+
+COPY perses-operator/ .
+
+RUN make build
+
+FROM registry.redhat.io/ubi8/ubi-minimal:8.10-1130
 
 LABEL maintainer="The Perses Authors <perses-team@googlegroups.com>"
 
 USER nobody
 
-COPY --chown=nobody:nobody perses-operator/bin/manager        /bin/manager
-COPY --chown=nobody:nobody perses-operator/LICENSE            /LICENSE
+COPY --from=build-env --chown=nobody:nobody /app/bin/manager  /bin/manager
+COPY --chown=nobody:nobody LICENSE                            /LICENSE
 COPY --from=build-env --chown=nobody:nobody                   /etc/mime.types /etc/mime.types
 
 EXPOSE     8080
