chore: prep midstream manifests
Signed-off-by: Pranshu Srivastava <rexagod@gmail.com>

--- a/Dockerfile.bundle
+++ b/Dockerfile.bundle
@@ -45,7 +45,7 @@ LABEL operators.operatorframework.io.test.config.v1=tests/scorecard/
 LABEL com.redhat.component="coo-bundle" \
       name="cluster-observability-operator-bundle" \
       version="v1.0.0" \
-      com.redhat.openshift.versions=v4.12 \
+      com.redhat.openshift.versions="v4.12-v4.18" \
       summary="Cluster Observability Operator Bundle" \
       io.openshift.tags="openshift,observability,monitoring" \
       io.k8s.display-name="Cluster Observability Operator Bundle" \
