catalog-template: add skipRange to enable upgrade
Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/catalog/catalog-template.yaml
+++ b/catalog/catalog-template.yaml
@@ -10,6 +10,9 @@ entries:
   schema: olm.package
 - entries:
   - name: cluster-observability-operator.v1.0.0
+    skipRange: '>=0.1.0 <1.0.0'
+  # for future entries add replace directives so that older entries don't get
+  # deleted. See https://olm.operatorframework.io/docs/concepts/olm-architecture/operator-catalog/creating-an-update-graph/#skiprange
   name: stable
   package: cluster-observability-operator
   schema: olm.channel
