--- a/catalog/coo-product/catalog.yaml
+++ b/catalog/coo-product/catalog.yaml
@@ -10,6 +10,7 @@ schema: olm.package
 ---
 entries:
 - name: cluster-observability-operator.v1.0.0
+  skipRange: '>=0.1.0 <1.0.0'
 name: stable
 package: cluster-observability-operator
 schema: olm.channel
